# Samples

QP_controller/lua/: RagdollFallPenalty.lua  RagdollFallQP.lua  driverDynamic.lua  driverIPCview.lua  driverKinematic.lua  summarizeParam.lua
QP_controller/lua/IPC_based/: .MovingWindowOptimizerSubroutines4.lua.swp  CompareChain.lua  LocoGraph.lua  LocoGraph.lua~  LocoSimulation.lua  LocoSynthesis.lua  MotionGraph.lua  MovingWindowOptimizer.lua  MovingWindowOptimizerMPI.lua  MovingWindowOptimizerSubroutines4.lua  MovingWindowPlayback.lua  atmtExport.lua  atmtImpulse.lua  atmtTurn.lua  cartPoleBall.lua  common.lua  createInitialPendControlParam.lua  debug_config.lua  driverExtractPendTrajectory.lua  driverGenPendTrajNoOptimize.lua  gymnist_roundoff.zmpcom  invertedPendulum2.lua  justin_straight_run_gen.dof  justin_straight_run_gen.zmpcom  runMapping.lua  testmw.lua  testmw2.lua  testmw_save.lua  testmw_sep.lua  trajGenerator.lua  useCase_handstand.lua  useCase_roundoff.lua  useCase_standing_no_cart.lua  useCase_straightRun_nocart.lua  useCase_turn2.lua  useCase_walk3.lua  useCases.lua
QP_controller/lua/control/: IPC3d_approx.lua  SDRE.lua
QP_controller/lua/subRoutines/: .QPservo.lua.swp  COPcontroller.lua  CompareChain.lua  ConvexHull2D.lua  IDservo.lua  LQRservo.lua  PDservo.lua  QPservo.lua  QPservo.lua.bak  QPservo_backup.lua  QPservo_switchingRootJoint.lua  RagdollSim.lua  ZMPcalculator.lua  base.lua  calcFFtorque.lua  console2.lua  edit.lua  gmbs_addon.lua  ikSolver.lua  motiongraph.lua  pickle.lua  test.lua
build_console/build_linux/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
build_console/build_linux_debug/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
build_console/build_linux_mpi/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
build_yssample1/build_linux/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
build_yssample1/build_linux_debug/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
console/: CMakeLists.txt  Makefile  OgreFltk.cpp  RigidBodyWin.cpp  RigidBodyWin.h  jobconsole.sh  luna_QP.cpp  luna_QP.lua  mpi.cpp  mrljobtest.sh  mrlmachines  rocksjobtest.sh  rocksmachines
scripts/: common.lua  common.lua~  module.lua
scripts/RigidBodyWin/: .WRLviewer.lua.swp  MotionViewer.lua  RagdollFall.lua  Segmentation.lua  WRLviewer.lua  _doesNothing.lua  cameraTracker.lua  console.lua  modifyModel.lua  modifyModel.lua~  testAnijustin.lua  testAnimation.lua  testDrawing.lua  testLimbIK.lua  testLimbIK_COM.lua  testLimbIK_fasfin.lua  testLimbIK_jae.lua  testMatplotlib.lua  testStitch.lua  testVRMLloader.lua  testjump.lua  testwalk.lua  testwalk3.lua
scripts/RigidBodyWin/motionFormatConversion/: RetargetDOFtoVRML.lua  RetargetDOFtoVRML.lua~  RetargetMotToVRML.lua  convertMOTtoWRL.lua  convertMOTtoWRL_GUI.lua
scripts/RigidBodyWin/subRoutines/: MatplotLib.lua  Optimizer.lua  OptimizerMPI.lua  RagdollSim.lua
ysbatch/: CMakeLists.txt  Makefile  OgreFltk.cpp  RigidBodyWin.cpp  batch.py  batch_avi.py  batchref.py  luna_QP.cpp  luna_QP.lua  luna_classification.cpp  luna_classification.lua  make  optimizer_lbfgs.hpp  quadprog.h  quadprog_qpOASES.cpp
ysbatch/cma/: CMAwrap.cpp
yssample1/: CMakeLists.txt  Makefile  OgreFltk.cpp  OgreFltk.h  RigidBodyWin.cpp  RigidBodyWin.h  energyTerms_0.tbl  energyTerms_1.tbl  energyTerms_10.tbl  energyTerms_11.tbl  energyTerms_12.tbl  energyTerms_13.tbl  energyTerms_14.tbl  energyTerms_15.tbl  energyTerms_2.tbl  energyTerms_3.tbl  energyTerms_4.tbl  energyTerms_5.tbl  energyTerms_6.tbl  energyTerms_7.tbl  energyTerms_8.tbl  energyTerms_9.tbl  getoptfromrock.sh  getsimulateresult.sh  killallatrock.sh  log.txt  luna_QP.cpp  optimizetestlog.txt  postest4muscle.txt  postesti.txt  quadprog.cpp  removeoptatrock.sh  remsimulateresult.sh  result.txt  runoptatrock.sh  simulateatrock.sh  sss  stdafx.h  test.txt  uploadtorock.sh
yssample1/cma/: CMAwrap.h
yssample1/qpOASES-3.0beta/: CMakeLists.txt  Makefile  cmake_install.cmake
yssample1/qpOASES-3.0beta/examples/: example1.cpp
ysscripts/: .optimizelog.txt.swp
ysscripts/lib/: Lee2013MuscleDyn.lua  LocoSimMuscle.lua  LocoSynthMuscle.lua  OsModel.lua  QPservo2.lua  WalkingDevice.lua  simulfunc.lua  utilfunc.lua
ysscripts/lib/WalkingDevices/: WalkingDeviceBase.lua  WalkingDeviceCMABase.lua  WalkingDeviceRAA.lua
ysscripts/samples/: Bvh2Dof.lua  MovingWindowOptimizerMPIMuscle.lua  MovingWindowOptimizerMuscle.lua  MovingWindowOptimizerSubroutines4Muscle.lua  MovingWindowOptimizerSubroutines4Muscle.lua.170318.backup  RagdollFallMuscle.lua  analyzeEnergyData.lua  batchcapture.lua  batchcapture_reference.lua  convertWRLtoBVH.lua  createInitialPendControlParamMuscle.lua  driverDynamicConsoleMuscle.lua  driverDynamicMuscle.lua  driverDynamicMuscle.lua.backup  driverExtractPendTrajectoryMuscle.lua  driverIDMuscle.lua  driverIPCviewMuscle.lua  driverKinematicMuscle.lua  modifyDof.lua  ragdollDynamicMuscle.lua  renderModels.lua  renderMuscleForce.lua  replayDynamicMuscle.lua  showMuscles.lua  testMetabolicEnergy.lua  testMuscles.lua  testPushRecovery.lua  testmw.lua  testmw2.lua  useCaseMuscle.lua  useCaseMuscle_ori.lua  useMuscle_g2592_device.lua  useMuscle_g2592_gait.lua  useMuscles.lua  useMuscles.lua~
ysscripts/samples/backup_170503/: useMuscle_full_same.lua  useMuscle_full_srun.lua  useMuscle_g2592_coact.lua  useMuscle_g2592_device.lua  useMuscle_g2592_gait.lua  useMuscle_g2592_gait_art_leg.lua  useMuscle_g2592_gait_dcjo.lua  useMuscle_g2592_ipfrun.lua  useMuscle_g2592_ipnrun.lua  useMuscle_g2592_surgery.lua  useMuscle_g2592_surgery_170406.lua  useMuscle_g2592_surgery_footpos.lua  (+2 more)
(+47 files in other folders)
